--- a/supervisord.conf
+++ b/supervisord.conf
@@ -5,11 +5,13 @@ nodaemon = true
 command = /usr/local/bin/run_influxdb
 stdout_logfile = /var/log/supervisor/%(program_name)s.log
 stderr_logfile = /var/log/supervisor/%(program_name)s.log
+autostart = true
 autorestart = true
 
 [program:grafana]
 command = /usr/local/bin/run_grafana
 stdout_logfile = /var/log/supervisor/%(program_name)s.log
 stderr_logfile = /var/log/supervisor/%(program_name)s.log
+autostart = true
 autorestart = true
 
