Fixed following things:   - Changed the run script to more meaningful   - Change set_grafana.sh, set_influxdb.sh and set_stats.sh Added Following:   - `docker-compose.yaml` file   - `.dockerignore` file   - added persistances

--- a/build
+++ b/build
@@ -2,4 +2,4 @@
 
 docker rm grafana-influxdb
 docker rmi -f grafana_influxdb
-docker build -t grafana_influxdb:$1 .
+docker build -t grafana_influxdb .
