--- a/grafana/config.ini
+++ b/grafana/config.ini
@@ -1,10 +1,92 @@
+app_mode = production
+instance_name = ${HOSTNAME}
+
+[paths]
+data = /srv/data/grafana/data
+logs = log
+plugins = /srv/data/grafana/plugins
+
 [server]
+protocol = http
+http_addr =
 http_port = 3000
-root_url = http://localhost
+domain = localhost
+enforce_domain = false
+root_url = %(protocol)s://%(domain)s:%(http_port)s/
+router_logging = false
+static_root_path = public
+enable_gzip = false
+cert_file =
+cert_key =
+socket = /tmp/grafana.sock
+
+[database]
+type = sqlite3
+host = 127.0.0.1:3306
+name = grafana
+user = root
+password =
+url =
+max_idle_conn =
+max_open_conn =
+ssl_mode = disable
+ca_cert_path =
+client_key_path =
+client_cert_path =
+server_cert_name =
+path = grafana.db
+
+[session]
+provider = file
+provider_config = sessions
+cookie_name = grafana_sess
+cookie_secure = false
+session_life_time = 86400
+gc_interval_time = 86400
+
+[dataproxy]
+logging = true
+
+
 [security]
 admin_user = admin
-admin_password = password
+admin_password = admin
+secret_key = SW2YcwTIb9zpOOhoPsMm
 login_remember_days = 7
+cookie_username = grafana_user
+cookie_remember_name = grafana_remember
+disable_gravatar = false
+data_source_proxy_whitelist =
+
+[auth.basic]
+enabled = true
+
+[log]
+mode = console file
+level = info
+filters =
+
+[log.console]
+level =
+format = console
+
+[log.file]
+level =
+format = text
+log_rotate = true
+max_lines = 1000000
+max_size_shift = 28
+daily_rotate = true
+max_days = 7
+
 [dashboards.json]
-enabled = false
-path = /var/lib/grafana/dashboards
+enabled = true
+path = /srv/data/grafana/dashboards
+
+[alerting]
+enabled = true
+execute_alerts = true
+
+[metrics]
+enabled           = true
+interval_seconds  = 10
